--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -403,13 +403,97 @@
     "class ChangeDetectionDataset():\n",
     "    \"\"\"Change Detection dataset class. For training and testing data\"\"\"\n",
     "    \n",
-    "    def __init__(self, path, train = True, patch_side = PATCH_SIDE, stride = None, use_all_bands = False, transform=None):\n",
+    "    def __init__(self, path, train = True, patch_side = PATCH_SIDE, stride = None, use_all_bands = False, transform = None):\n",
     "        \"\"\"\n",
     "        Args:\n",
     "            csv_file (string): path to the csv file with annotations\n",
     "            root_dir (string): directory with all the images\n",
     "            transform (callable, optional): optional transform to be applied on a sample\n",
     "        \"\"\"\n",
+    "        \n",
+    "        self.transform  = transform\n",
+    "        self.path       = path\n",
+    "        self.patch_side = patch_side\n",
+    "        \n",
+    "        if not stride: # use stride?\n",
+    "            self.stride = 1\n",
+    "        else:\n",
+    "            self.stride = stride\n",
+    "            \n",
+    "        if train: # train or test?\n",
+    "            fname = 'train.txt'\n",
+    "        else:\n",
+    "            fname = 'test.txt'\n",
+    "            \n",
+    "        self.names  = read_csv(path + fname).columns\n",
+    "        self.n_imgs = self.names.shape[0]\n",
+    "        \n",
+    "        n_pixels    = 0\n",
+    "        true_pixels = 0\n",
+    "        \n",
+    "        # load images\n",
+    "        self.imgs_1 = {}\n",
+    "        self.imgs_2 = {}\n",
+    "        self.change_maps = {}\n",
+    "        self.n_patches_per_img = {}\n",
+    "        self.n_patches = 0\n",
+    "        self.patch_coords = []\n",
+    "        \n",
+    "        for img_name in tqdm(self.names): # tqdm derives from the Arabic word taqaddum (تقدّم) which can mean \"progress,\" and is an abbreviation for \"I love you so much\" in Spanish (te quiero demasiado).\n",
+    "            # load and store each image\n",
+    "            I1, I2, cm = read_sentinel_img_trio(self.path + img_name)\n",
+    "            self.imgs_1[img_name] = reshape_torch(I1)\n",
+    "            self.imgs_2[img_name] = reshape_torch(I2)\n",
+    "            self.change_maps[im_name] = cm\n",
+    "            \n",
+    "            cm_shape    = cm.shape\n",
+    "            n_pixels    += np.prod(cm_shape)\n",
+    "            true_pixels += cm.sum()\n",
+    "            \n",
+    "            # calculate the number of patches\n",
+    "            img_shape = self.imgs_1[img_name].shape\n",
+    "            n1 = ceil((img_shape[1] - self.patch_side + 1) / self.stride)\n",
+    "            n2 = ceil((img_shape[2] - self.patch_side + 1) / self.stride)\n",
+    "            n_patches_i = n1 * n2\n",
+    "            self.n_patches_per_img[img_name] = n_patches_i\n",
+    "            self.n_patches += n_patches_i\n",
+    "            \n",
+    "            # generate path coordinates\n",
+    "            for i in range(n1):\n",
+    "                for j in range(n2):\n",
+    "                    # coordinates in (x1, x2, y1, y2)\n",
+    "                    current_patch_coords = (img_name, \n",
+    "                                    [self.stride*i, self.stride*i + self.patch_side, self.stride*j, self.stride*j + self.patch_side],\n",
+    "                                    [self.stride*(i + 1), self.stride*(j + 1)])\n",
+    "                    self.patch_coords.append(current_patch_coords)\n",
+    "                    \n",
+    "        self.weights = [ FP_MODIFIER * 2 * true_pixels / n_pixels, 2 * (n_pixels - true_pixels) / n_pixels]\n",
+    "        \n",
+    "        def get_img(self, img_name):\n",
+    "            # return imgs_1, imgs_2, cm\n",
+    "            return self.imgs_1[img_name], self.imgs_2[img_name], self.change_maps[img_name]\n",
+    "        \n",
+    "        def __len__(self):\n",
+    "            return self.n_patches\n",
+    "        \n",
+    "        def __getitem__(self, i):\n",
+    "            current_patch_coords = self.patch_coords[i]\n",
+    "            img_name = current_patch_coords[0]\n",
+    "            limits   = current_patch_coords[1]\n",
+    "            center   = current_patch_coords[2]\n",
+    "            \n",
+    "            I1 = self.imgs_1[img_name][:, limits[0]:limits[1], limits[2]:limits[3]]\n",
+    "            I1 = self.imgs_2[img_name][:, limits[0]:limits[1], limits[2]:limits[3]]\n",
+    "            \n",
+    "            label = self.change_maps[img_name][limits[0]:limits[1], limits[2]:limits[3]]\n",
+    "            label = torch.from_numpy(1 * np.array(label)).float()\n",
+    "            \n",
+    "            sample = {'I1': I1, 'I2': I2, 'label': label}\n",
+    "            \n",
+    "            if self.transform: # related to data augmentation, torch -> tr\n",
+    "                sample = self.transform(sample)\n",
+    "                \n",
+    "            return sample  \n",
     "        \n",
     "    print(\"class ChangeDetectionDataset\")"
    ]
