--- a/models/f-res-unet.ipynb
+++ b/models/f-res-unet.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fully Residual Unet"
+    "# F-Res-UNet"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,6 +230,32 @@
     "        x = self.sm(x)\n",
     "        \n",
     "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfrom torchvision import models\\nfrom torchsummary import summary\\n\\nvgg = models.vgg16()\\nsummary(vgg, (3, 224, 224))\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "from torchvision import models\n",
+    "from torchsummary import summary\n",
+    "\n",
+    "vgg = models.vgg16()\n",
+    "summary(vgg, (3, 224, 224))\n",
+    "\"\"\""
    ]
   },
   {
