--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Detecção de Mudança\n",
     "\n",
-    "## Imports\n",
+    "## Bibliotecas\n",
     "\n",
     "### Pytorch\n",
     "\n",
@@ -17,14 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pytorch imported\n"
+      "Pytorch imported - Ok\n"
      ]
     }
    ],
@@ -33,6 +33,8 @@
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
+    "\n",
+    "import torchvision.transforms as tr # transforms, data augmentation\n",
     "#...\n",
     "print(\"Pytorch imported - Ok\")"
    ]
@@ -46,24 +48,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Models imported\n"
+      "Models imported - Ok\n"
      ]
     }
    ],
    "source": [
     "# Models\n",
+    "import import_ipynb\n",
     "\n",
     "from unet import unet\n",
-    "# ..\n",
+    "%run ../models/f-res-unet.ipynb # import F_res_UNet\n",
+    "#from ../models/f-res-unet.ipynb import F_res_UNet\n",
+    "#import models/f-res-unet.ipynb\n",
     "\n",
     "print(\"Models imported - Ok\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TESTE 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "%run test.ipynb import Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "class ChangeDetectionDataset\n",
+      "Dataset imported - Ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dataset\n",
+    "\n",
+    "# import functions from dataset/\n",
+    "%run ../dataset/dataset-utl.ipynb\n",
+    "\n",
+    "print(\"Dataset imported - Ok\")"
    ]
   },
   {
@@ -75,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Others imported\n"
+      "Others imported - Ok\n"
      ]
     }
    ],
@@ -99,6 +151,7 @@
     "from math import floor, ceil, sqrt, exp\n",
     "import time\n",
     "from scipy.ndimage import zoom # zoom image\n",
+    "from tqdm import tqdm as tqdm # \"progress\" (taqadum, تقدّم) - te quiero demasiado\n",
     "# ...\n",
     "\n",
     "print(\"Others imported - Ok\")"
@@ -120,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- PATH_TO_DATA_SET:\n",
+    "- DATASET_PATH:\n",
     "- IS_PROTOTYPE:\n",
     "- BATCH_SIZE: \n",
     "- PATCH_SIDE:\n",
@@ -164,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -183,27 +236,127 @@
     "BATCH_SIZE = 32\n",
     "PATCH_SIDE = 96\n",
     "# N_EPOCHS = 50\n",
-    "N_EPOCHS = 5\n",
+    "N_EPOCHS = 5 # hard to use large number of epochs even in colab\n",
     "\n",
     "# NORMALISE_IMGS = True\n",
     "\n",
-    "# TRAIN_STRIDE = int(PATCH_SIDE/2) - 1\n",
+    "TRAIN_STRIDE = int(PATCH_SIDE/2) - 1 # 47\n",
     "\n",
     "BAND_TYPE = 3 # 0-RGB | 1-RGBIr | 2-All bands s.t. resulution <= 20m | 3-All bands\n",
     "\n",
     "# LOAD_TRAINED = False\n",
     "\n",
-    "# DATA_AUG = True\n",
+    "DATA_AUGMENTATION = True\n",
     "\n",
-    "PATH_LOCAL_DATASET = '/home/virginia/Github/change-detection/onera-oscd/OSCD'\n",
-    "PATH_COLAB_DATASET = '/content/dataset/MyDrive/OSCD/'\n",
+    "FP_MODIFIER = 10 # tunning parameter, use 1 if unsure\n",
     "\n",
-    "if IS_LOCAL:\n",
-    "    PATH_TO_DATASET = PATH_LOCAL_DATASET\n",
+    "DATASET_LOCAL_PATH = '/home/virginia/Github/change-detection/onera-oscd/OSCD/'\n",
+    "DATASET_COLAB_PATH = '/content/dataset/MyDrive/OSCD/'\n",
+    "\n",
+    "if IS_COLAB:\n",
+    "    DATASET_PATH = DATASET_COLAB_PATH\n",
     "else:\n",
-    "    PATH_TO_DATASET = PATH_COLAB_DATASET\n",
+    "    DATASET_PATH = DATASET_LOCAL_PATH\n",
     "\n",
     "print(\"Global definitions - Ok\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Augmentation\n",
+    "\n",
+    "Recentes avanços na aquisição e processamento de imagens digitais permitiram o uso eficiente e inovador de dados fornecidos por meio de bases de dados em aplicações de inteligência artificial e redes neurais (ML, DL). Entretanto, ainda existe uma deficiência na obtenção dessa base de dados, pois determinadas técnicas computacionais necessitam de um grande volume de dados para fornecer soluções confiáveis e com capacidade de generalizar diferentes entradas. É nesse contexto que se inserem as técnicas de *Data Augmentation* em imagens.\n",
+    "\n",
+    "Essa técnica tem como intuito gerar novos dados virtuais a partir de exemplos reais para prover mais volume de informações e dar suporte ao desenvolvimento de aplicações mais robustas.\n",
+    "\n",
+    "Uma das técnicas que podem ser utilizadas é são métodos de transformações geométricas, por exemplo: *flipping*, rotação, translação, *cropping* (corte), *zoom* (escala), *shear* (cisalhamento).\n",
+    "\n",
+    "(Data Agmentation)[https://sol.sbc.org.br/livros/index.php/sbc/catalog/download/48/217/455-1?inline=1]\n",
+    "\n",
+    "TO-DO:\n",
+    "- analisar *overfitting*\n",
+    "- analisar *oversampling*\n",
+    "\n",
+    "### Compositions of transforms\n",
+    "\n",
+    "```\n",
+    "torchvision.transforms.Compose(transforms)\n",
+    "```\n",
+    "\n",
+    "- **transforms** (list of ```Transform``` objects) – list of transforms to compose.\n",
+    "\n",
+    "Composes several transforms together. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data augmentation - Ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "if DATA_AUGMENTATION:\n",
+    "    data_aug_transform = tr.Compose([RandomFlip(), RandomRot()])\n",
+    "else:\n",
+    "    data_aug_transform = None\n",
+    "\n",
+    "print(\"Data augmentation - Ok\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prepare Dataset\n",
+    "\n",
+    "Prepare Dataset to train."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/14 [00:00<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'int' object has no attribute 'mean'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-50-54e4a46e15d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_dataset\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mChangeDetectionDataset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDATASET_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstride\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTRAIN_STRIDE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdata_aug_transform\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mIS_COLAB\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# access to GPU\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mweights\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# local run\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-49-9d96080e801d>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, path, train, patch_side, stride, use_all_bands, transform)\u001b[0m\n\u001b[1;32m     40\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mimg_name\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtqdm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;31m# tqdm derives from the Arabic word taqaddum (تقدّم) which can mean \"progress,\" and is an abbreviation for \"I love you so much\" in Spanish (te quiero demasiado).\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0;31m# load and store each image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0mI1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mI2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_sentinel_img_trio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mimg_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimgs_1\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreshape_torch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimgs_2\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mreshape_torch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mI2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-49-df8b0d1e171c>\u001b[0m in \u001b[0;36mread_sentinel_img_trio\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# TO-DO: test with read_sentinel_img\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# TYPE is defined globally\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0mI1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_sentinel_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mIMG_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m     \u001b[0mI2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_sentinel_img\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mIMG_2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-49-fccee53ac51b>\u001b[0m in \u001b[0;36mread_sentinel_img\u001b[0;34m(path)\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mNORMALISE_IMGS\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0mI\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mI\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mI\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"read_sentinel_img()\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'mean'"
+     ]
+    }
+   ],
+   "source": [
+    "train_dataset = ChangeDetectionDataset(DATASET_PATH, train=True, stride=TRAIN_STRIDE, transform=data_aug_transform)\n",
+    "\n",
+    "if IS_COLAB: # access to GPU\n",
+    "    weights = torch.FloatTensor(train_dataset.weights).cuda()\n",
+    "else: # local run\n",
+    "    weights = torch.FloatTensor(train_dataset.weights)\n",
+    "    \n",
+    "print(weights)"
    ]
   },
   {
