--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,31 +272,32 @@
     "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
     "    \n",
     "    img_name = os.listdir(path)[0][:-7]\n",
+    "    I = 0\n",
     "    \n",
-    "    if TYPE ==(1|2|3|4):\n",
+    "    if BAND_TYPE ==(1|2|3|4):\n",
     "        red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
     "        green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
     "        blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
-    "        if(TYPE == 1):\n",
+    "        if(BAND_TYPE == 1):\n",
     "            I = np.stack((red, green, blue), axis=2).astype('float')\n",
     "    \n",
-    "    if TYPE == (2|3|4):\n",
+    "    if BAND_TYPE == (2|3|4):\n",
     "        nir   = io.imread(path + img_name + SENTINEL_NIR_10m)\n",
     "        shape = red.shape\n",
-    "        if(TYPE == 2):\n",
+    "        if(BAND_TYPE == 2):\n",
     "            I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
     "    \n",
-    "    if TYPE == (3|4):\n",
+    "    if BAND_TYPE == (3|4):\n",
     "        ir1   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
     "        ir2   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
     "        ir3   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
     "        ir4   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
     "        swir1 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_1_20m), 2), s)\n",
     "        swir2 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_2_20m), 2), s)\n",
-    "        if(TYPE == 3):\n",
+    "        if(BAND_TYPE == 3):\n",
     "             I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
     "        \n",
-    "    if TYPE == 4:\n",
+    "    if BAND_TYPE == 4:\n",
     "        uv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_AEROSOL_60m), 6), s)\n",
     "        wv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
     "        cir = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_CIRRUS_60m), 6), s)\n",
@@ -306,7 +307,8 @@
     "    if NORMALISE_IMGS:\n",
     "        I = (I - I.mean()) / I.std()\n",
     "    \n",
-    "    print(\"read_sentinel_img()\")"
+    "    print(\"read_sentinel_img()\")\n",
+    "    return I"
    ]
   },
   {
